添加部署脚本

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,12 @@ image: java:8
 
 stages:
   - build
+  - deploy
 
 build:
   stage: build
+  script: ./mvnw clean install
+
+deploy_staging:
+  stage: deploy
   script: ./mvnw clean install
