--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,29 @@
-image: java:8
-
 stages:
   - build
+  - package
   - deploy
 
 build:
+  image: java:8
   stage: build
   script: ./mvnw clean install
+  artifacts:
+      paths:
+        - target/teamsking-server.jar
+
+docker-build:
+  image: docker:latest
+  stage: package
+  script:
+  - cd docker
+  - docker build -t registry.gitlab.com/windnet.cn/teamsking_backend .
+  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+  - docker push registry.gitlab.com/teamsking/teamsking-server
 
 deploy_staging:
+  image: docker:latest
   stage: deploy
   script: ./mvnw clean install
+  environment:
+      name: staging
+
