--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,9 +17,8 @@ docker-build:
     - docker:dind
   stage: package
   script:
-  - cd docker
-  - ls
-  - docker build -t registry.gitlab.com/windnet.cn/teamsking_backend .
+  - cp docker/Dockerfile .
+  - docker build -t registry.gitlab.com/windnet.cn/teamsking_backend:$CI_ENVIRONMENT_NAME .
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker push registry.gitlab.com/teamsking/teamsking-server
 
