--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ docker-build:
   stage: package
   script:
   - cp docker/Dockerfile .
-  - docker build -t registry.gitlab.com/windnet.cn/teamsking_backend:$CI_ENVIRONMENT_NAME .
+  - docker build -t registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAME .
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker push registry.gitlab.com/teamsking/teamsking-server
 
