--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,26 +22,26 @@ docker-build:
   - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
   - docker push registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAME
 
-#deploy-staging:
-#  image: docker:latest
-#  services:
-#      - docker:dind
-#  stage: deploy
-#  variables:
-#      DOCKER_HOST: tcp://docker.windnet.cn:2376
-#      DOCKER_TLS_VERIFY: 1
-#  script:
-#    - mkdir -p ~/.docker
-#    - echo "$TLSCACERT" > ~/.docker/ca.pem
-#    - echo "$TLSCERT" > ~/.docker/cert.pem
-#    - echo "$TLSKEY" > ~/.docker/key.pem
-#    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
-#    - docker ps
-#  when: manual
-#  environment:
-#    name: staging
-#  only:
-#    - staging
+deploy-staging:
+  image: docker:latest
+  services:
+      - docker:dind
+  stage: deploy
+  variables:
+      DOCKER_HOST: tcp://docker.windnet.cn:2376
+      DOCKER_TLS_VERIFY: 1
+  script:
+    - mkdir -p ~/.docker
+    - echo "$TLSCACERT" > ~/.docker/ca.pem
+    - echo "$TLSCERT" > ~/.docker/cert.pem
+    - echo "$TLSKEY" > ~/.docker/key.pem
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
+    - docker ps
+  when: manual
+  environment:
+    name: staging
+  only:
+    - staging
 
 deploy-dev:
   image: docker:latest
