--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ deploy-staging:
     - echo $TLSCACERT > ~/.docker/ca.pem
     - echo $TLSCERT > ~/.docker/cert.pem
     - echo $TLSKEY > ~/.docker/key.pem
-    - cat ./docker/ca.pem
+    - cat ~/.docker/ca.pem
 #    - docker ps
 #  when: manual
   environment:
