--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,13 +31,13 @@ deploy-staging:
       DOCKER_HOST: tcp://docker.windnet.cn:2376
       DOCKER_TLS_VERIFY: 1
   script:
-#    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - mkdir -p ~/.docker
     - echo $TLSCACERT > ~/.docker/ca.pem
     - echo $TLSCERT > ~/.docker/cert.pem
     - echo $TLSKEY > ~/.docker/key.pem
     - cat ~/.docker/ca.pem
-#    - docker ps
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+    - docker ps
 #  when: manual
   environment:
     name: staging
