--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ docker-build:
   script:
   - cp docker/Dockerfile .
   - docker build -t registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAME .
-  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+  - docker login -u gitlab-ci-token -p "$CI_BUILD_TOKEN" registry.gitlab.com
   - docker push registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAME
 
 deploy-staging:
