--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,8 @@ deploy-staging:
     - echo $TLSCACERT > ~/.docker/ca.pem
     - echo $TLSCERT > ~/.docker/cert.pem
     - echo $TLSKEY > ~/.docker/key.pem
-    - cat ~/.docker/ca.pem
+    - echo abc > ~/.docker/t
+    - cat ~/.docker/t
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker ps
 #  when: manual
