--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,9 +35,7 @@ deploy-staging:
     - echo $TLSCACERT > ~/.docker/ca.pem
     - echo $TLSCERT > ~/.docker/cert.pem
     - echo $TLSKEY > ~/.docker/key.pem
-    - echo abc > ~/.docker/t
-    - cat ~/.docker/t
-    - echo $TLSCACERT
+    - cat ~/.docker/ca.pem
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
     - docker ps
 #  when: manual
