--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ docker-build:
   script:
   - cp docker/Dockerfile .
   - docker build -t registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAME .
-  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+  - docker login -u $CI_USER -p $CI_USER_PWD registry.gitlab.com
   - docker push registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAME
 
 deploy-staging:
@@ -36,7 +36,7 @@ deploy-staging:
     - echo $TLSCERT > ~/.docker/cert.pem
     - echo $TLSKEY > ~/.docker/key.pem
     - cat ~/.docker/ca.pem
-    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+    - docker login -u $CI_USER -p $CI_USER_PWD registry.gitlab.com
     - docker ps
 #  when: manual
   environment:
