--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,8 @@ deploy-staging:
     - cat ~/.docker/ca.pem
     - docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem \
         -H=$SWARM_MANAGER:2376 version
-    - docker login -u $CI_USER -p $CI_USER_PWD registry.gitlab.com
+    - docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem \
+              -H=$SWARM_MANAGER:2376 login -u $CI_USER -p $CI_USER_PWD registry.gitlab.com
     - docker ps
 #  when: manual
   environment:
