--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ deploy-service:
   script:
     - docker login -u $CI_USER -p $CI_USER_PWD registry.gitlab.com
     - docker images
-    - docker pull registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAM
+    - docker pull registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAME
     - docker service create --name api-staging-$CI_COMMIT_REF_NAME
         --label traefik.port=8080 --label traefik.domain=windnet.cn
         --network windnet
