修改部署脚本

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ deploy-staging:
         --label traefik.port=8080 --label traefik.domain=windnet.cn
         --network windnet
         registry.gitlab.com/windnet.cn/teamsking_backend:$CI_COMMIT_REF_NAME
-  when: manual
+#  when: manual
   environment:
     name: staging
     url: api-staging-$CI_COMMIT_REF_NAME.windnet.cn
