课程列表接口示例

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,5 @@ pagehelper:
     reasonable: true
     supportMethodsArguments: true
     params: count=countSql
+mybatis:
+  mapperLocations: classpath:mapper/*.xml
